# TrustAgent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SYSTEM-FLOW-EXPLAINED.md  architecture-blueprint-generator.prompt.md  detailed_plan.md  docker-compose.yml  plan.md  test_audit.sh  test_direct_audit.py  test_e2e.py  test_full_flow.sh  test_system.sh
backend-python/: Dockerfile  README.md  conftest.py  pyproject.toml  test_e2e.py
backend-python/data/: seed_knowledge.json
backend-python/evals/: __init__.py  build_golden.py  metrics.py  run_eval.py
backend-python/evals/baselines/: golden_v1.json
backend-python/evals/datasets/: __init__.py  download.py
backend-python/evals/datasets/golden/: golden_v1.jsonl
backend-python/evals/datasets/halueval/: .gitignore
backend-python/evals/fixtures/: golden_v1_fixtures.json
backend-python/scripts/: generate_proto.sh  seed_knowledge.py
backend-python/src/truthtable/: __init__.py  config.py  main.py  metrics.py  security.py
backend-python/src/truthtable/graphs/: audit_graph.py  state.py
backend-python/src/truthtable/grpc/: server.py
backend-python/src/truthtable/kb/: __init__.py  contradiction.py  hybrid.py  ingestion.py
backend-python/src/truthtable/providers/: __init__.py  anthropic.py  (+5 more)
backend-python/tests/integration/: test_rag_pipeline.py
backend-python/tests/unit/: test_audit_graph_pipeline.py  test_cloud_providers.py  test_decomposer.py  test_eval_metrics.py  test_kb.py  test_mock_provider.py  test_ollama_provider.py  test_prompt_injection.py  test_provider_base.py
(+122 files in other folders)
