[tool.poetry]
name = "truthtable"
version = "0.1.0"
description = "TruthTable AI Audit Engine - Hallucination Detection Service"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "truthtable", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
langgraph = "^0.0.20"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
qdrant-client = "^1.16.0"
redis = "^5.0.0"
prometheus-client = "^0.19.0"
sentence-transformers = ">=5.0.0"
torch = ">=2.0.0"
numpy = ">=1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.9"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
